# GEMM

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  comparison.c  gemm.c  matrix.c  naive_gemm.c  transpose_gemm.c
src/include/: matrix.h  naive_gemm.h  transpose_gemm.h
src/include/GEMM/: gemm.h
src/include/GEMM/naive/: naive_gemm.h
src/include/GEMM/transpose/: transpose_gemm.h
src/naive/: naive_gemm.c
src/transpose/: transpose_gemm.c
tests/: test_matrix.c  test_naive.c  test_transpose_gemm.c
